Project modularization and skeleton creation for Login functionality

--- a/iae-ui/index.html
+++ b/iae-ui/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <link rel="stylesheet" href="styles.css">
 
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheset">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Polyfill(s) for older browsers -->
