--- a/iae-ui/app/login/signin.html
+++ b/iae-ui/app/login/signin.html
@@ -5,11 +5,11 @@
 		</div>
 		<div class="form-group">
 			<label for="username">User Name</label>
-			<input type="text"  id="username" name="username" placeholder="Email or Phone Number" class="form-control" [(ngModel)]="signinData.username" required />
+			<input type="text"  id="username" name="username" placeholder="Email or Phone Number" class="form-control" [(ngModel)]="signinUser.username" required />
 		</div>
 		<div class="form-group">
 			<label for="password">Password</label>
-			<input type="password"  id="password" name="password" class="form-control" [(ngModel)]="signinData.password" required/>
+			<input type="password"  id="password" name="password" class="form-control" [(ngModel)]="signinUser.password" required/>
 		</div>
 		<div class="btn-group pull-right">
 			<button type="submit" class="btn-primary btn">Login</button>
