--- a/iae-ui/app/login/signin.html
+++ b/iae-ui/app/login/signin.html
@@ -1,21 +1,63 @@
-<div class="container" id="signin">
-<h2>LOGIN</h2>
-	<form (ngSubmit)="validateSignin()" #signinform="ngForm">
-	<div>
-		</div>
-		<div class="form-group">
-			<label for="username">User Name</label>
-			<input type="text"  id="username" name="username" placeholder="Email or Phone Number" class="form-control" [(ngModel)]="signinUser.username" required />
-		</div>
-		<div class="form-group">
-			<label for="password">Password</label>
-			<input type="password"  id="password" name="password" class="form-control" [(ngModel)]="signinUser.password" required/>
-		</div>
-		<div class="btn-group pull-right">
-			<button type="submit" class="btn-primary btn">Login</button>
-		</div>		
-	</form>
-	
-	<div>Don't have account ? <a style="cursor:pointer;" routerLink="/signup">Create an Account</a>
-	</div>
+<div class="panel panel-primary" style="margin-left:30%;width:500px;">
+    <div class="panel-heading">
+        <span>Sign In!</span><span style="float:right"> Don't have an account ? <a style="color: white;text-decoration: underline;cursor: pointer;" routerLink="/signup">Create account</a></span>
+    </div>
+
+    <div class="panel-body">
+        <form class="form-horizontal"
+              novalidate
+              (ngSubmit)="signin()"
+              [formGroup]="signinForm">
+            <fieldset>
+            	<div class="form-group"
+                    [ngClass]="{'has-error': firstNameMessage }">
+                    <label class="col-md-3 control-label" 
+                           for="userNameId">User Name</label>
+                    <div class="col-md-6">
+                        <input class="form-control" 
+                               id="userNameId"
+                               type="text" 
+                               class="col-md-12" 
+                               formControlName="userName"
+                               placeholder="Email or Phone Number"/>
+                    </div>
+                </div>
+                <div class="form-group"
+                    [ngClass]="{'has-error': firstNameMessage }">
+                    <label class="col-md-3 control-label" 
+                           for="passwordId">Password</label>
+                    <div class="col-md-6">
+                        <input class="form-control" 
+                               id="passwordId"
+                               type="text" 
+                               class="col-md-12" 
+                               formControlName="password"
+                               placeholder="Password"/>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-4 col-md-offset-6">
+                        <span>
+                            <button class="btn btn-primary col-md-8"
+                                    type="submit"
+                                    [disabled]="!signinForm.valid">
+                                Login
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-12 col-md-offset-2">
+                        <span>
+                            	<div>Forgot password ? 
+	                            	<a style="cursor:pointer;">
+	                            	   Click here
+	                            	</a>
+					</div>
+                        </span>
+                    </div>
+                </div>
+            </fieldset>
+         </form>
+    </div>
 </div>
