--- a/iae-ui/app/login/signup.html
+++ b/iae-ui/app/login/signup.html
@@ -1,36 +1,169 @@
-<div class="container" id="signup">
-<h2>CREATE ACCOUNT</h2>
-	<form (ngSubmit)="registerUser()" #signupform="ngForm">
-	<div>
-		</div>
-		<div class="form-group">
-			<label for="username">Name</label>
-			<input type="text"  id="username" name="username" class="form-control" [(ngModel)]="newuser.username" required />
-		</div>
-		<div class="form-group">
-			<label for="address">Address</label>
-			<input type="text"  id="address" name="address" class="form-control" [(ngModel)]="newuser.address" required/>
-		</div>
-		<div class="form-group">
-			<label for="phone">Phone Number</label>
-			<input type="text"  id="phone" name="phone" class="form-control" [(ngModel)]="newuser.phone" required/>
-		</div>
-		<div class="form-group">
-			<label for="email">Email Address</label>
-			<input type="text"  id="email" name="email" class="form-control" [(ngModel)]="newuser.email"/>
-		</div>
-		<div class="form-group">
-			<label for="password">Password</label>
-			<input type="password"  id="password" name="password" class="form-control" [(ngModel)]="newuser.password" required/>
-		</div>
-		<div class="form-group">
-			<label for="cpassword">Confirm Password</label>
-			<input type="password"  id="cpassword" name="cpassword" class="form-control" [(ngModel)]="newuser.cpassword" required/>
-		</div>
-		<div class="btn-group pull-right">
-			<button type="button" class="btn-secondary btn" (click)="resetForm()">Reset</button>
-			<button type="submit" class="btn-primary btn">Submit</button>
-		</div>
-		
-	</form>
+<div class="panel panel-primary" style="margin-left: 20%;margin-right: 20%;">
+    <div class="panel-heading">
+        Sign Up!
+    </div>
+
+    <div class="panel-body">
+        <form class="form-horizontal"
+              novalidate
+              (ngSubmit)="signup()"
+              [formGroup]="signupForm">
+            <fieldset>
+                <div class="form-group"
+                    [ngClass]="{'has-error': firstNameMessage }">
+                    <label class="col-md-2 control-label" 
+                           for="firstNameId">First Name</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="firstNameId"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="firstName"
+                               placeholder="First Name (required)"/>
+                        <span class="help-block" *ngIf="firstNameMessage">
+                            {{ firstNameMessage }}
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group"
+                    [ngClass]="{'has-error': lastNameMessage }">
+                    <label class="col-md-2 control-label" 
+                           for="lastNameId">Last Name</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="lastNameId"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="lastName"
+                               placeholder="Last Name (required)"/>
+                        <span class="help-block" *ngIf="lastNameMessage">
+                            {{ lastNameMessage }}
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group"
+                     [ngClass]="{'has-error': emailMessage }">
+                    <label class="col-md-2 control-label" 
+                           for="emailId">Email</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="emailId"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="email"
+                               placeholder="Email (required)"/>
+                        <span class="help-block" *ngIf="emailMessage">
+                            {{ emailMessage }}
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group"
+                     [ngClass]="{'has-error': phoneMessage }">
+                    <label class="col-md-2 control-label" 
+                           for="phoneId">Phone</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="phoneId"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="phone"
+                               placeholder="Phone (required)"/>
+                        <span class="help-block" *ngIf="phoneMessage">
+                            {{ phoneMessage }}
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group"
+                     [ngClass]="{'has-error': address1Message }">
+                    <label class="col-md-2 control-label" 
+                           for="address1Id">Address 1</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="address1Id"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="address1"
+                               placeholder="Address 1 (required)"/>
+                        <span class="help-block" *ngIf="address1Message">
+                            {{ address1Message }}
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group"
+                     [ngClass]="{'has-error': address2Message }">
+                    <label class="col-md-2 control-label" 
+                           for="address2Id">Address 2</label>
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="address2Id"
+                               type="text" 
+                               class="col-md-8" 
+                               formControlName="address2"
+                               placeholder="Address 2"/>
+                        <span class="help-block" *ngIf="address2Message">
+                            {{ address2Message }}
+                        </span>
+                    </div>
+                </div>
+                <div formGroupName="passwordGroup"
+                    [ngClass]="{'has-error': signupForm.get('passwordGroup').errors }">
+                    <div class="form-group"
+                        [ngClass]="{'has-error': passwordMessage}">
+                        <label class="col-md-2 control-label" 
+                               for="passwordId">Password</label>
+                        <div class="col-md-8">
+                            <input class="form-control" 
+                                   id="passwordId"
+                                   type="text" 
+                                   class="col-md-8" 
+                                   formControlName="password"
+                                   placeholder="Password (required)"/>
+                            <span class="help-block" *ngIf="passwordMessage">
+                                {{ passwordMessage }}
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group"
+                        [ngClass]="{'has-error': confirmPasswordMessage}">
+                        <label class="col-md-2 control-label" 
+                               for="confirmPasswordId">Confirm Password</label>
+                        <div class="col-md-8">
+                            <input class="form-control" 
+                                   id="confirmPasswordId"
+                                   type="text" 
+                                   class="col-md-8" 
+                                   formControlName="confirmPassword"
+                                   placeholder="Confirm Password (required)"/>
+                            <span class="help-block">
+                                <span *ngIf="confirmPasswordMessage">
+                                    {{ confirmPasswordMessage }}
+                                </span>
+                                <span *ngIf="signupForm.get('passwordGroup').errors?.match">
+                                    Confirmation does not match the password.
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-4 col-md-offset-2">
+                        <span>
+                            <button class="btn btn-primary"
+                                    [disabled]="!signupForm.valid"
+                                    type="submit">
+                                Submit
+                            </button>
+                        </span>
+                        <span>
+                            <button class="btn btn-default"
+                                    type="button" 
+                                    (click)="resetForm()">
+                                Reset
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
