Menu and image slider added to home page

--- a/iae-ui/app/home/maincontainer.html
+++ b/iae-ui/app/home/maincontainer.html
@@ -1,2 +1,6 @@
-<div>main</div>
-
+<div id="main_container">
+<p>start of div</p>
+	<div id="imageslider_container">
+    		<iae-imageslider></iae-imageslider>
+    	</div>
+</div>
