--- a/iae-ui/index.html
+++ b/iae-ui/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
 
-  <body>
+  <body style="background-color: #e0dbd4;">
     <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
