--- a/iae-ui/app/login/signin.html
+++ b/iae-ui/app/login/signin.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" style="margin-left:30%;width:500px;">
+<div class="panel panel-primary" style="width: 600px;margin: 0 auto;">
     <div class="panel-heading">
         <span>Sign In!</span><span style="float:right"> Don't have an account ? <a style="color: white;text-decoration: underline;cursor: pointer;" routerLink="/signup">Create account</a></span>
     </div>
@@ -14,10 +14,9 @@
                     <label class="col-md-3 control-label" 
                            for="userNameId">User Name</label>
                     <div class="col-md-6">
-                        <input class="form-control" 
-                               id="userNameId"
+                        <input id="userNameId"
                                type="text" 
-                               class="col-md-12" 
+                               class="form-control col-md-12" 
                                formControlName="userName"
                                placeholder="Email or Phone Number"/>
                     </div>
@@ -27,10 +26,9 @@
                     <label class="col-md-3 control-label" 
                            for="passwordId">Password</label>
                     <div class="col-md-6">
-                        <input class="form-control" 
-                               id="passwordId"
+                        <input id="passwordId"
                                type="text" 
-                               class="col-md-12" 
+                               class="form-control col-md-12" 
                                formControlName="password"
                                placeholder="Password"/>
                     </div>
