--- a/iae-ui/app/login/signup.html
+++ b/iae-ui/app/login/signup.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" style="margin-left: 20%;margin-right: 20%;">
+<div class="panel panel-primary" style="width: 700px;margin: 0 auto;">
     <div class="panel-heading">
         Sign Up!
     </div>
@@ -11,96 +11,90 @@
             <fieldset>
                 <div class="form-group"
                     [ngClass]="{'has-error': firstNameMessage }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="firstNameId">First Name</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="firstNameId"
+                        <input id="firstNameId"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8" 
                                formControlName="firstName"
                                placeholder="First Name (required)"/>
-                        <span class="help-block" *ngIf="firstNameMessage">
+                        <span class="col-md-8 help-block" *ngIf="firstNameMessage">
                             {{ firstNameMessage }}
                         </span>
                     </div>
                 </div>
                 <div class="form-group"
                     [ngClass]="{'has-error': lastNameMessage }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="lastNameId">Last Name</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="lastNameId"
+                        <input id="lastNameId"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8"  
                                formControlName="lastName"
                                placeholder="Last Name (required)"/>
-                        <span class="help-block" *ngIf="lastNameMessage">
+                        <span class="col-md-8 help-block" *ngIf="lastNameMessage">
                             {{ lastNameMessage }}
                         </span>
                     </div>
                 </div>
                 <div class="form-group"
                      [ngClass]="{'has-error': emailMessage }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="emailId">Email</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="emailId"
+                        <input id="emailId"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8"  
                                formControlName="email"
                                placeholder="Email (required)"/>
-                        <span class="help-block" *ngIf="emailMessage">
+                        <span class="col-md-8 help-block" *ngIf="emailMessage">
                             {{ emailMessage }}
                         </span>
                     </div>
                 </div>
                 <div class="form-group"
                      [ngClass]="{'has-error': phoneMessage }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="phoneId">Phone</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="phoneId"
+                        <input id="phoneId"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8"  
                                formControlName="phone"
                                placeholder="Phone (required)"/>
-                        <span class="help-block" *ngIf="phoneMessage">
+                        <span class="col-md-8 help-block" *ngIf="phoneMessage">
                             {{ phoneMessage }}
                         </span>
                     </div>
                 </div>
                 <div class="form-group"
                      [ngClass]="{'has-error': address1Message }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="address1Id">Address 1</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="address1Id"
+                        <input id="address1Id"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8" 
                                formControlName="address1"
                                placeholder="Address 1 (required)"/>
-                        <span class="help-block" *ngIf="address1Message">
+                        <span class="col-md-8 help-block" *ngIf="address1Message">
                             {{ address1Message }}
                         </span>
                     </div>
                 </div>
                 <div class="form-group"
                      [ngClass]="{'has-error': address2Message }">
-                    <label class="col-md-2 control-label" 
+                    <label class="col-md-3 control-label" 
                            for="address2Id">Address 2</label>
                     <div class="col-md-8">
-                        <input class="form-control" 
-                               id="address2Id"
+                        <input id="address2Id"
                                type="text" 
-                               class="col-md-8" 
+                               class="form-control col-md-8" 
                                formControlName="address2"
                                placeholder="Address 2"/>
-                        <span class="help-block" *ngIf="address2Message">
+                        <span class="col-md-8 help-block" *ngIf="address2Message">
                             {{ address2Message }}
                         </span>
                     </div>
@@ -109,32 +103,30 @@
                     [ngClass]="{'has-error': signupForm.get('passwordGroup').errors }">
                     <div class="form-group"
                         [ngClass]="{'has-error': passwordMessage}">
-                        <label class="col-md-2 control-label" 
+                        <label class="col-md-3 control-label" 
                                for="passwordId">Password</label>
                         <div class="col-md-8">
-                            <input class="form-control" 
-                                   id="passwordId"
+                            <input id="passwordId"
                                    type="text" 
-                                   class="col-md-8" 
+                                   class="form-control col-md-8" 
                                    formControlName="password"
                                    placeholder="Password (required)"/>
-                            <span class="help-block" *ngIf="passwordMessage">
+                            <span class="col-md-8 help-block" *ngIf="passwordMessage">
                                 {{ passwordMessage }}
                             </span>
                         </div>
                     </div>
                     <div class="form-group"
                         [ngClass]="{'has-error': confirmPasswordMessage}">
-                        <label class="col-md-2 control-label" 
+                        <label class="col-md-3 control-label" 
                                for="confirmPasswordId">Confirm Password</label>
                         <div class="col-md-8">
-                            <input class="form-control" 
-                                   id="confirmPasswordId"
+                            <input id="confirmPasswordId"
                                    type="text" 
-                                   class="col-md-8" 
+                                   class="form-control col-md-8" 
                                    formControlName="confirmPassword"
                                    placeholder="Confirm Password (required)"/>
-                            <span class="help-block">
+                            <span class="col-md-8 help-block">
                                 <span *ngIf="confirmPasswordMessage">
                                     {{ confirmPasswordMessage }}
                                 </span>
@@ -146,7 +138,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-4 col-md-offset-2">
+                    <div class="col-md-4 col-md-offset-4">
                         <span>
                             <button class="btn btn-primary"
                                     [disabled]="!signupForm.valid"
