home page changes

--- a/iae-ui/app/home/maincontainer.html
+++ b/iae-ui/app/home/maincontainer.html
@@ -1,6 +1,25 @@
 <div id="main_container">
-<p>start of div</p>
-	<div id="imageslider_container">
-    		<iae-imageslider></iae-imageslider>
-    	</div>
+	<img src="https://raw.githubusercontent.com/christiannwamba/angular2-carousel-component/master/images/preschool.jpg" width="100%" height="350px">
+	<div class="jumbotron">
+	    	<div class="col-md-4 panel panel-default introduction">
+			introduction
+		</div>
+		<div class="col-md-4 panel panel-default events">
+			<h4>events and updates</h4>
+	    		<iae-imageslider></iae-imageslider>
+		</div>
+		<div class="col-md-4 panel panel-default achievements">
+			Achievements
+		</div>
+		<div class="col-md-4 panel panel-default">
+			introduction
+		</div>
+		<div class="col-md-4 panel panel-default">
+			events and updates
+		</div>
+		<div class="col-md-4 panel panel-default">
+			Achievements
+		</div>
+	</div>
 </div>
+	
