addactivities.html added

--- a/iae-ui/app/home/header.html
+++ b/iae-ui/app/home/header.html
@@ -16,7 +16,7 @@
 				<a routerLink="home">Home</a>
 			</li>
 			<li>
-				<a routerLink="addactivities">About Us</a>
+				<a routerLink="addactivity">About Us</a>
 				<ul>
 					<li>
 						<a routerLink="home">About IAE</a>
