activities view and add

--- a/iae-ui/app/home/header.html
+++ b/iae-ui/app/home/header.html
@@ -16,7 +16,7 @@
 				<a routerLink="home">Home</a>
 			</li>
 			<li>
-				<a routerLink="addactivity">About Us</a>
+				<a [routerLink]="['/activity','new']">About Us</a>
 				<ul>
 					<li>
 						<a routerLink="home">About IAE</a>
@@ -33,7 +33,7 @@
 				</ul>
 			</li>
 			<li>
-				<a routerLink="viewactivities">Projects</a>
+				<a routerLink="activities">Projects</a>
 			</li>
 			<li>
 				<a routerLink="home">Volunteers</a>
