home page changes

--- a/iae-ui/app/home/footer.html
+++ b/iae-ui/app/home/footer.html
@@ -1,3 +1,5 @@
-<div id="footer_container">
-	<span id="copyright">Copyright © 2017 IAE| All rights reserved</span>
+<div class="footer">
+    <div class="footer_contents">
+    		<span id="copyright">Copyright © 2017 IAE| All rights reserved</span>
+    </div>
 </div>
