--- a/iae-ui/app/home/header.html
+++ b/iae-ui/app/home/header.html
@@ -16,27 +16,10 @@
 				<a routerLink="home">Home</a>
 			</li>
 			<li>
-				<a [routerLink]="['/activity','new']">About Us</a>
-				<ul>
-					<li>
-						<a routerLink="home">About IAE</a>
-					</li>
-					<li>
-						<a routerLink="home">FAQ</a>
-					</li>
-					<li>
-						<a routerLink="home">History</a>
-					</li>
-					<li>
-						<a routerLink="home">Our Supporters</a>
-					</li>
-				</ul>
-			</li>
-			<li>
 				<a routerLink="activities">Projects</a>
 			</li>
 			<li>
-				<a routerLink="home">Volunteers</a>
+				<a  [routerLink]="['/activity','new']">OPPORTUNITIES</a>
 			</li>
 			<li>
 				<a routerLink="home">Gallery</a>
