home page design changes with file download

--- a/iae-ui/app/home/maincontainer.html
+++ b/iae-ui/app/home/maincontainer.html
@@ -13,15 +13,62 @@
 		</div>
 		<div class="col-md-4 panel panel-default achievements">
 			<h5 class="panel-heading">UPCOMING EVENTS</h5>
+			<marquee direction="up" scrollamount="3" onmouseover="stop()" onmouseout="start()">
+                 		<a href="">
+                    		<p class="marquee-txt clearfix">
+                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
+                        		<span class="pull-right">13 October 2016</span>
+                        	</p>
+                    	</a>
+                    	<a href="">
+                    		<p class="marquee-txt clearfix">
+                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
+                        		<span class="pull-right">13 October 2016</span>
+                        	</p>
+                    	</a>
+                    	<a href="">
+                    		<p class="marquee-txt clearfix">
+                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
+                        		<span class="pull-right">13 October 2016</span>
+                        	</p>
+                    	</a>
+                    	<a href="">
+                    		<p class="marquee-txt clearfix">
+                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
+                        		<span class="pull-right">13 October 2016</span>
+                        	</p>
+                    	</a>
+			</marquee>
 		</div>
 		<div class="col-md-4 panel panel-default">
-			<h5 class="panel-heading">ACHIEVEMENTS</h5>
+			<h5 class="panel-heading">ACHIEVEMENTS & SUCCESS STORIES</h5>
+			<p style="font-size: 17px;"><b>EDUCATION</b></p>
+			<ul>
+				<li>21,346 children directly provided education</li>
+				<li>Infrastructure support to 34 education centres, benefitting 6,890 children</li>
+				<li>Over 8,000 children from 46 locations across India received nutrition support</li>
+				<li>6,879 school drop-outs resumed education through bridge-course</li>
+			</ul>
+			<button class="readMore">Read More...</button>
 		</div>
 		<div class="col-md-4 panel panel-default">
-			<h5 class="panel-heading">GALLERY</h5>
+			<h5 class="panel-heading">SUPPORTERS TALK</h5>
+			<p class="supporterTalk">
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQicNqNk8RiNWoPJuFf3SKaU4djasTTPcW29jUupooCsOaom3i6">
+				“We understand our social responsibility as an organization and always look for correct partners to work towards this. Doing great work for national development and REC is happy to associate with them."
+			</p>
+			<p class="supporter">Krishnam Raju, Chairman & MD of ABCD Ltd.</p>
+			<button class="readMore">Read More...</button>
 		</div>
 		<div class="col-md-4 panel panel-default lastpanel">
-			<h5 class="panel-heading">SUPPORTERS TALK</h5>
+			<h5 class="panel-heading">ANNUAL REPORTS</h5>
+			<div style="margin-top: 10px;margin-left: 10px;">
+				<download displayName="2016 Annual Report" fileName="annual_report.pdf" filePath="app/blank.pdf"></download>
+				<download displayName="2015 Annual Report" fileName="annual_report.pdf" filePath="app/blank.pdf"></download>
+				<download displayName="2014 Annual Report" fileName="annual_report.pdf" filePath="app/blank.pdf"></download>
+				<download displayName="2013 Annual Report" fileName="annual_report.pdf" filePath="app/blank.pdf"></download>
+				<download displayName="2012 Annual Report" fileName="annual_report.pdf" filePath="app/blank.pdf"></download>
+			</div>
 		</div>
 	</div>
 </div>
