--- a/iae-ui/index.html
+++ b/iae-ui/index.html
@@ -22,6 +22,6 @@
   </head>
 
   <body style="background-color: #e0dbd4;">
-    <my-app>Loading AppComponent content here ...</my-app>
+    <my-app>Application Loading...</my-app>
   </body>
 </html>
