--- a/iae-ui/app/login/signup.html
+++ b/iae-ui/app/login/signup.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" style="width: 700px;margin: 0 auto;margin-top: 30px;">
+<div class="panel panel-primary" style="width: 700px;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;">
     <div class="panel-heading">
         {{pageTitle}}
     </div>
