--- a/iae-ui/app/login/signin.html
+++ b/iae-ui/app/login/signin.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary" style="width: 600px;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;">
     <div class="panel-heading">
-        <span>Sign In!</span><span style="float:right"> Don't have an account ? <a style="color: white;text-decoration: underline;cursor: pointer;" routerLink="/signup">Create account</a></span>
+        <span>{{pageTitle}}</span><span style="float:right"> Don't have an account ? <a style="color: white;text-decoration: underline;cursor: pointer;" routerLink="/signup">Create account</a></span>
     </div>
 
     <div class="panel-body">
