--- a/iae-ui/app/home/footer.html
+++ b/iae-ui/app/home/footer.html
@@ -1,5 +1,6 @@
 <div class="footer">
     <div class="footer_contents">
     		<span id="copyright">Copyright © 2017 IAE| All rights reserved</span>
+    		<span style="margin-left: 200px;">This website developed & maintaining by IAE Volunteers</span>
     </div>
 </div>
