--- a/iae-ui/app/home/maincontainer.html
+++ b/iae-ui/app/home/maincontainer.html
@@ -3,9 +3,11 @@
 	<div class="jumbotron">
 	    	<div class="col-md-4 panel panel-default introduction" style="padding-left: 15px;padding-right: 25px;padding-top: 10px;">
 			<p class="textPanel">
-			 	My Foundation is a national level development organisation directly benefitting over 400,000 children and their families every year, through more than 200 live welfare projects on education, healthcare, livelihood and women empowerment, in over 950 remote villages and slums across 25 states of India.
+			I&Eye as an Organization was launched in the year 2008 with a group of 7 individuals. We started as a small group of like-minded people reaching out to the needy, especially visually children, who were finding it difficult to afford education, health and good food.
+			<br>
+			Our primary focus is to support children in need, to lead better lives and have good career prospects. I & Eye strives its best to see that children who are visually challenged from all walks of life to grow into independent individuals and become capable of supporting themselves and others. We try our best to inculcate positive thinking and self-confidence into these challenged lives.
 			 </p>
-			 <button class="readMore">Read More...</button>
+			 <button class="readMore" routerLink="/about">Read More...</button>
 		</div>
 		<div class="col-md-4 panel panel-default events">
 			<h5 class="panel-heading">EVENTS & UPDATES</h5>
@@ -13,52 +15,20 @@
 		</div>
 		<div class="col-md-4 panel panel-default achievements">
 			<h5 class="panel-heading">UPCOMING EVENTS</h5>
-			<marquee direction="up" scrollamount="3" onmouseover="stop()" onmouseout="start()">
-                 		<a href="">
-                    		<p class="marquee-txt clearfix">
-                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
-                        		<span class="pull-right">13 October 2016</span>
-                        	</p>
-                    	</a>
-                    	<a href="">
-                    		<p class="marquee-txt clearfix">
-                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
-                        		<span class="pull-right">13 October 2016</span>
-                        	</p>
-                    	</a>
-                    	<a href="">
-                    		<p class="marquee-txt clearfix">
-                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
-                        		<span class="pull-right">13 October 2016</span>
-                        	</p>
-                    	</a>
-                    	<a href="">
-                    		<p class="marquee-txt clearfix">
-                    	           	<span class="clearfix highlight">LG eyes 30% increase in sales</span>
-                        		<span class="pull-right">13 October 2016</span>
-                        	</p>
-                    	</a>
-			</marquee>
+			<upcomingevents></upcomingevents>
 		</div>
 		<div class="col-md-4 panel panel-default">
 			<h5 class="panel-heading">ACHIEVEMENTS & SUCCESS STORIES</h5>
-			<p style="font-size: 17px;"><b>EDUCATION</b></p>
-			<ul>
-				<li>21,346 children directly provided education</li>
-				<li>Infrastructure support to 34 education centres, benefitting 6,890 children</li>
-				<li>Over 8,000 children from 46 locations across India received nutrition support</li>
-				<li>6,879 school drop-outs resumed education through bridge-course</li>
-			</ul>
-			<button class="readMore">Read More...</button>
+			<achievements></achievements>
 		</div>
 		<div class="col-md-4 panel panel-default">
 			<h5 class="panel-heading">SUPPORTERS TALK</h5>
 			<p class="supporterTalk">
 			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQicNqNk8RiNWoPJuFf3SKaU4djasTTPcW29jUupooCsOaom3i6">
-				“We understand our social responsibility as an organization and always look for correct partners to work towards this. Doing great work for national development and REC is happy to associate with them."
+				“I&Eye is very dedicated towards the wellbeing of those children by becoming there Vision through its activities. Encouraging Students not only in Education , but also in sports like Cricket , Judo , Rubik's cube , Chess and Music. I am very happy to serve for an organization like I&Eye where it's truly being human and support."
 			</p>
-			<p class="supporter">Krishnam Raju, Chairman & MD of ABCD Ltd.</p>
-			<button class="readMore">Read More...</button>
+			<p class="supporter">-Krishnam Raju, Chairman & MD of ABCD Ltd.</p>
+			<button class="readMore" routerLink="/supportersTalk">Read More...</button>
 		</div>
 		<div class="col-md-4 panel panel-default lastpanel">
 			<h5 class="panel-heading">ANNUAL REPORTS</h5>
