--- a/iae-ui/app/home/header.html
+++ b/iae-ui/app/home/header.html
@@ -19,10 +19,10 @@
 				<a routerLink="home">Home</a>
 			</li>
 			<li>
-				<a routerLink="activities">Projects</a>
+				<a routerLink="projects">Projects</a>
 			</li>
 			<li>
-				<a routerLink="activities">OPPORTUNITIES</a>
+				<a routerLink="home">OPPORTUNITIES</a>
 			</li>
 			<li>
 				<a routerLink="home">Gallery</a>
