--- a/iae-ui/app/activities/addproject.html
+++ b/iae-ui/app/activities/addproject.html
@@ -74,7 +74,7 @@
                            for="logoLocWithNameId">logoLocWithName</label>
                     <div class="col-md-6">
                         <input id="logoLocWithNameId"
-                               type="text" 
+                               type="file" 
                                class="form-control col-md-12" 
                                formControlName="logoLocWithName"
                                placeholder="logoLocWithName"/>
