--- a/iae-ui/app/home/achievements.html
+++ b/iae-ui/app/home/achievements.html
@@ -8,8 +8,12 @@
 			</ul>
 			<button class="readMore" routerLink="/achievements/explain">Read More...</button>
 </div>
-<div *ngIf="showType=='explain'">
-	<h2> Achievements and success stories in detailed </h2>
-	
 
+<div class="panel panel-primary" style="width: 75%;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;"  *ngIf="showType=='explain'">
+    
+
+    <div class="panel-body">
+    <h2> Achievements and success stories in detailed </h2>
+        
+    </div>
 </div>
