--- a/iae-ui/app/home/introduction.html
+++ b/iae-ui/app/home/introduction.html
@@ -1,12 +1,21 @@
-The Mission is to provide quality education and health including rectification of vision for visually impaired children; The Goal would be provide a community based learning mechanism and improve the education percentages among the visually impaired children
-
-Our vision is to support and nurture visually impaired children into healthy and independent individuals
-
+ <div class="panel panel-primary" style="width: 75%;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;" >
+    <div class="panel-body" style="text-align: justify;">
+    <h2>Mission & Vision</h2>
+    <p>
+      The Mission is to provide quality education and health including rectification of vision for visually impaired children; The Goal would be provide a community based learning mechanism and improve the education percentages among the visually impaired children.
+     </p>
+     <p> 
+	Our vision is to support and nurture visually impaired children into healthy and independent individuals
+	</p>
+	<p>
 I&Eye as an Organization was launched in the year 2008 with a group of 7 individuals. We started as a small group of like-minded people reaching out to the needy, especially children, who were finding it difficult to afford education, health and good food.
-
+</p>
+<p>
 Our primary focus is to support children in need, to lead better lives and have good career prospects. I & Eye strives its best to see that children who are visually challenged from all walks of life to grow into independent individuals and become capable of supporting themselves and others. We try our best to inculcate positive thinking and self-confidence into these challenged lives.
-
+</p>
+<p>
 In order to attain our goal, we focus our efforts on the health and education of the children.
-
-I&Eye has launched many programs to provide support to visually challenged individuals at every aspect of their lives.
- 
+</p><p>
+I&Eye has launched many programs to provide support to visually challenged individuals at every aspect of their lives. </p>
+    </div>
+</div>
