--- a/iae-ui/app/home/upcomingevents.html
+++ b/iae-ui/app/home/upcomingevents.html
@@ -26,8 +26,12 @@
                     	</a>
 			</marquee>
 </div>
-<div *ngIf="showType=='explain'">
-	<h2> Upcoming events in detailed </h2>
-	
 
+<div class="panel panel-primary" style="width: 75%;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;"  *ngIf="showType=='explain'">
+    
+
+    <div class="panel-body">
+    <h2>Upcoming events in detailed</h2>
+        
+    </div>
 </div>
