--- a/iae-ui/app/home/supporterstalk.html
+++ b/iae-ui/app/home/supporterstalk.html
@@ -1,6 +1,10 @@
-<h5 class="panel-heading">SUPPORTERS TALK</h5>
-<p class="supporterTalk">
-<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQicNqNk8RiNWoPJuFf3SKaU4djasTTPcW29jUupooCsOaom3i6">
-	“I&Eye is very dedicated towards the wellbeing of those children by becoming there Vision through its activities. Encouraging Students not only in Education , but also in sports like Cricket , Judo , Rubik's cube , Chess and Music. I am very happy to serve for an organization like I&Eye where it's truly being human and support."
-</p>
-<p class="supporter">-Krishnam Raju, Chairman & MD of ABCD Ltd.</p>
+<div class="panel panel-primary" style="width: 75%;margin: 0 auto;margin-top: 30px;margin-bottom: 15px;" >
+    <div class="panel-body">
+    <h2>Supporters talk</h2>
+       <p class="supporterTalk">
+		<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQicNqNk8RiNWoPJuFf3SKaU4djasTTPcW29jUupooCsOaom3i6">
+		“I&Eye is very dedicated towards the wellbeing of those children by becoming there Vision through its activities. Encouraging Students not only in Education , but also in sports like Cricket , Judo , Rubik's cube , Chess and Music. I am very happy to serve for an organization like I&Eye where it's truly being human and support."
+	</p>
+	<p class="supporter">-Krishnam Raju, Chairman & MD of ABCD Ltd.</p> 
+    </div>
+</div>
